--- a/web/src/package.json
+++ b/web/src/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts3-angular": "^1.5.0",
     "@angular/animations": "^4.2.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
@@ -23,6 +24,7 @@
     "@angular/router": "^4.2.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "@types/jquery": "^3.2.13",
+    "amcharts3": "github:amcharts/amcharts3",
     "angular-highcharts": "^4.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
